practice (mixins,placeholders)

--- a/index.html
+++ b/index.html
@@ -57,52 +57,58 @@
       </section>
       <section class="section services">
         <div class="container">
-          <h2 class="title text-black">
+          <h2 class="services__title title text-black">
             Мы создаем мобильные приложения для крупных корпораций
           </h2>
-          <p class="text">
+          <p class="services__text">
             Lorem Ipsum - это текст-"рыба", часто используемый в печати и
             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
             латинице с начала XVI века.
           </p>
-          <ul class="services__list grid">
-            <li class="services__item grid-item">
-              <div class="icon-wrapper">
+          <ul class="services__list">
+            <li class="services__item">
+              <div class="services-wrapper">
                 <svg width="40" height="40">
                   <use href="./img/sprite.svg#icon-services"></use>
                 </svg>
               </div>
-              <div class="text-wrapper">
-                <h3 class="subtitle text-black">Создание сайтов</h3>
-                <p class="description">
+              <div class="services-descr">
+                <h3 class="services-descr__subtitle text-black">
+                  Создание сайтов
+                </h3>
+                <p class="services-descr__text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
               </div>
             </li>
-            <li class="item grid-item">
-              <div class="icon-wrapper">
+            <li class="services__item">
+              <div class="services-wrapper">
                 <svg width="40" height="40">
                   <use href="./img/sprite.svg#icon-services"></use>
                 </svg>
               </div>
-              <div class="text-wrapper">
-                <h3 class="subtitle text-black">Создание сайтов</h3>
-                <p class="description">
+              <div class="services-descr">
+                <h3 class="services-descr__subtitle text-black">
+                  Создание сайтов
+                </h3>
+                <p class="services-descr__text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
               </div>
             </li>
-            <li class="item grid-item">
-              <div class="icon-wrapper">
+            <li class="services__item">
+              <div class="services-wrapper">
                 <svg width="40" height="40">
                   <use href="./img/sprite.svg#icon-services"></use>
                 </svg>
               </div>
-              <div class="text-wrapper">
-                <h3 class="subtitle text-black">Создание сайтов</h3>
-                <p class="description">
+              <div class="services-descr">
+                <h3 class="services-descr__subtitle text-black">
+                  Создание сайтов
+                </h3>
+                <p class="services-descr__text">
                   Lorem Ipsum - это текст- "рыба", часто используе в печати и
                   вэб-дизайне.
                 </p>
